<resources>
    <string name="app_name">MovieSync</string>
    <string name="title_current">Now Playing</string>
    <string name="title_movie">Movie</string>
    <string name="title_favorite">Favorite</string>
    <string name="action_settings">Settings</string>
    <string name="action_trending">Trending</string>
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_notify_name">Notification</string>
    <string name="pref_key_notify">key_notification</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="pref_notify_summary">Daily reminder</string>
    <string name="notif_content">Check out the latest films from The Movie Database now!</string>
    <string name="notif_title">Movie Time!</string>
    <string name="reminder_header">Reminder</string>
    <string name="display_header">Display</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tv">TV Show</string>
    <string name="actionbar_movie_details">Movie Details</string>
    <string name="pattern_rating">#.#</string>
    <string name="remove_from_fav">Remove %1$s From</string>
    <string name="add_to_fav">Add %1$s To</string>
    <string name="actionbar_settings">Settings</string>
    <string name="notification_turned_on">Notification Turned On</string>
    <string name="notification_turned_off">Notification Turned Off</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="cd_iv_poster">Film Poster</string>
    <string name="cd_tv_moviename">Movie Name</string>
    <string name="cd_tv_releasedate">2023-07-29</string>
    <string name="cd_tv_rating">0.0</string>
    <string name="cd_tv_description">Overview: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac purus id ex blandit luctus. Nulla facilisi. Donec at justo a eros auctor cursus. In hac habitasse platea dictumst. Nunc nec tristique mi.</string>
    <string name="cd_fb_favorite">Favorite Floating Button</string>
    <string name="cd_tv_nofavorite">Your favorite movies list is empty. To add movies to your favorites, click the heart icon on the movie\'s detail page.</string>
</resources>