<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_current">
    <fragment
        android:id="@+id/navigation_current"
        android:name="com.dicoding.moviesync.ui.current.CurrentFragment"
        android:label="@string/title_current"
        tools:layout="@layout/fragment_current" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.dicoding.moviesync.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.dicoding.moviesync.ui.movie.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_movie" />
</navigation>